--- a/main.html
+++ b/main.html
@@ -58,7 +58,7 @@
                     <img src="img/1.jpg" alt="image">
                     <div class="card-body">
                         <h5 class="card-title">Luka Arellano</h5>
-                        <p class="card-title">Specializes in general mental help and eating disorders</p>
+                        <p class="card-title">Specializes in general mental help and eating disorders.</p>
                         <p class="card-title">Email: luka.arellano@gmail.com<br>Phone: 0293864834</p>
                     </div>
                 </div>
